--- a/composer.json
+++ b/composer.json
@@ -15,26 +15,27 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.0",
         "composer-runtime-api": "^2.0",
-        "laravel/framework": "~8.0 || ~9.0",
+        "laravel/framework": "~9.33 || ~10.0",
         "nyholm/psr7": "^1.5",
-        "spiral/roadrunner-http": "^2.0.4",
-        "spiral/roadrunner-worker": "^2.1.5",
-        "symfony/psr-http-message-bridge": "^2.0"
+        "spiral/roadrunner-http": "^2.2",
+        "spiral/roadrunner-worker": "^2.2",
+        "symfony/psr-http-message-bridge": "^2.1"
     },
     "require-dev": {
         "guzzlehttp/guzzle": "^6.3 || ~7.0",
-        "inertiajs/inertia-laravel": "^0.4.2 || ^0.5",
+        "inertiajs/inertia-laravel": "^0.6",
         "tightenco/ziggy": "^1.4.0",
-        "laravel/laravel": "~8.0 || ~9.0",
-        "laravel/scout": "~9.0",
+        "laravel/laravel": "~9.1 || ~10.0",
+        "laravel/scout": "~9.0 || ~10.0",
         "laravel/socialite": "^5.0",
         "laravel/telescope": "^4.5",
         "livewire/livewire": "^2.7",
-        "mockery/mockery": "~1.3.3 || ^1.4.2",
-        "phpstan/phpstan": "~1.4",
-        "phpunit/phpunit": "^9.3.3"
+        "mockery/mockery": "^1.4.4",
+        "phpstan/phpstan": "~1.6",
+        "phpunit/phpunit": "^9.5.10",
+        "brick/math": "^0.10"
     },
     "autoload": {
         "psr-4": {
